Bug 482378 - recorder docker works perfectly except for no auto-start (have box checked)
Summary: recorder docker works perfectly except for no auto-start (have box checked)
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Dockers/Recorder (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-03-04 12:47 UTC by fae
Modified: 2024-11-08 18:07 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description fae 2024-03-04 12:47:53 UTC
SUMMARY
***
Hello, running Sunday's krita-5.3.0-prealpha-de10297103-x86_64.appimage and it's awesome except for the issue of recorder not auto-starting, even though have it set to auto-start. Have managed to forget to record every single time for 2 days, lol, but was testing brushes etc so no work recordings lost. Was previously running krita-5.2.0-prealpha-e41db7b620-x86_64.appimage and no issues.
***


STEPS TO REPRODUCE
1. Open Krita.
2. Start new or open already active canvas.
3. Check recorder docker and see that it hasn't automatically started recording. 

OBSERVED RESULT
Recorder docker not running/needs to be manually started. 

EXPECTED RESULT
Docker is set to auto-start, and usually does that perfectly.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: MX Linux 21 xfce, running Mate 1.24.1, kernel 5.10, x11, mesa 20.3.5
amd ryzen7, radeo rx5700xt, 32 ram

Qt Version: 5

ADDITIONAL INFORMATION
Wasn't sure if other autostart plugin (oughtasave) may be clashing with recorder, but testing removing it didn't fix things. Not running many plugins otherwise ... old reference docker, kanvasbuddy, Krita UI redesign, scratchpad, shortcut composer, brushes fixer special. Also trying out reference tabs docker + have toolkit installed although may remove latter. 
Have added recorder button to Kanvasbuddy; not sure if that would affect the recorder docker though, as otherwise record/export works great using the open mp4 codec.
Comment 1 Reinold Rojas 2024-03-14 19:14:09 UTC
I can replicate this issue so setting to confirmed
Comment 2 Bug Janitor Service 2024-04-06 04:05:51 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/krita/-/merge_requests/2108
Comment 3 Dmitry Kazakov 2024-04-08 11:57:22 UTC
Git commit a7f98137d9ec042b6599444f55ce6c94fbb9c232 by Dmitry Kazakov, on behalf of Freya Lupen.
Committed on 08/04/2024 at 11:51.
Pushed by dkazakov into branch 'master'.

Fix automatic timelapse recording

Avoid calling setup() twice, so a check for that doesn't
trigger a stop().

M  +6    -5    plugins/dockers/recorder/recorderdocker_dock.cpp

https://invent.kde.org/graphics/krita/-/commit/a7f98137d9ec042b6599444f55ce6c94fbb9c232
Comment 4 fae 2024-04-08 23:00:39 UTC
Really appreciate this issue being looked at ... have done separate bug report about segfault (485252) when try to run appimage containing the fix. Tbh wouldn't be able to test/feedback further (post-segfault), with seeing notes about a 2nd part of the recorder issue, where frames can get mixed up if doing more than one painting at a time? Have I understood correctly? Everyone's superbusy, but is this something that's intended to be looked at at some later point?

PS no idea what am doing with the status thing below, lol, but did best guess.
Comment 5 Dmitry Kazakov 2024-11-08 11:54:05 UTC
Hi, fae!

The bug seems to be fixed now. If you have an issue with the frames mixed between two different images, please make a separate report with clear steps on how to reproduce it. I tried to reproduce the issue locally and it seems like Krita starts two separate recordings when two images are open, which looks like an expected behavior.
Comment 6 fae 2024-11-08 18:07:26 UTC
Thanks Dmitry!