Fix automatic timelapse recording

Avoid calling setup() twice, so a check for that doesn't
trigger a stop().

BUG:482378